--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -4,7 +4,7 @@ on:
   schedule:
     - cron: '30 1 * * */3'
 jobs:
-  buildiso:
+  updateflake:
     if: (startsWith(github.event.head_commit.message, 'update:') || (github.event_name == 'schedule'))
     runs-on: ubuntu-latest
     steps:
@@ -25,7 +25,8 @@ jobs:
     - name: Commit changes
       run: |
         git status
+	echo "git status done."
         git config --global user.name 'GitHub Action - Harry Ying'
         git config --global user.email 'LEXUGEyky@outlook.com'
         git commit -am "Update flake.lock - automated"
-        git push
+        git push || true
