--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -2,7 +2,7 @@ name: "Update flake dependencies"
 on:
   push:
   schedule:
-    - cron: '30 1 * * */3'
+    - cron: '0 0 * * *'
 jobs:
   updateflake:
     if: (startsWith(github.event.head_commit.message, 'update:') || (github.event_name == 'schedule'))
