--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -12,8 +12,17 @@ jobs:
         fetch-depth: 0
     - uses: cachix/install-nix-action@v12
       with:
-        install_url: https://github.com/numtide/nix-flakes-installer/releases/download/nix-2.4pre20200618_377345e/install
-    # Configure Nix to enable flakes
-    - run: echo "experimental-features = nix-command flakes" | sudo tee -a /etc/nix/nix.conf
+        install_url: https://github.com/numtide/nix-flakes-installer/releases/download/nix-2.4pre20210126_f15f0b8/install
+        # Configure Nix to enable flakes
+        extra_nix_config: |
+          experimental-features = nix-command flakes
+
+    - uses: cachix/cachix-action@v8
+      if: ${{ github.event_name == 'push' }}
+      with:
+        name: lexuge
+        authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
+
     # Run the general flake checks
-    - run: nix flake check
+    - run: nix flake check -vL
+
