--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -13,20 +13,18 @@ jobs:
       with:
         # Nix Flakes doesn't work on shallow clones
         fetch-depth: 0
-    - name: Install nixFlake
-      uses: cachix/install-nix-action@v12
+    - uses: cachix/install-nix-action@v12
       with:
-        install_url: https://github.com/numtide/nix-flakes-installer/releases/download/nix-2.4pre20200618_377345e/install
-    - name: Configure Nix to enable flake
-      run: echo "experimental-features = nix-command flakes" | sudo tee -a /etc/nix/nix.conf
-    - name: Update flake.lock
-      id: update
-      run: nix flake update --recreate-lock-file
-    - name: Commit changes
-      run: |
-        git status
-        echo "git status done."
-        git config --global user.name 'GitHub Action - Harry Ying'
-        git config --global user.email 'LEXUGEyky@outlook.com'
-        git diff-index --quiet HEAD || git commit -am "Update flake.lock - automated"
-        git push
+        install_url: https://github.com/numtide/nix-flakes-installer/releases/download/nix-2.4pre20210126_f15f0b8/install
+        # Configure Nix to enable flakes
+        extra_nix_config: |
+          experimental-features = nix-command flakes
+
+    - uses: cachix/cachix-action@v8
+      if: ${{ github.event_name == 'push' }}
+      with:
+        name: lexuge
+        authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
+
+    # Run the general flake checks
+    - run: nix flake check -vL
