--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -6,23 +6,18 @@ jobs:
   check:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
       with:
         # Nix Flakes doesn't work on shallow clones
         fetch-depth: 0
-    - uses: cachix/install-nix-action@v12
-      with:
-        install_url: https://github.com/numtide/nix-flakes-installer/releases/download/nix-2.4pre20210126_f15f0b8/install
-        # Configure Nix to enable flakes
-        extra_nix_config: |
-          experimental-features = nix-command flakes
+    - uses: cachix/install-nix-action@v20
 
-    - uses: cachix/cachix-action@v8
-      if: ${{ github.event_name == 'push' }}
+    - uses: cachix/cachix-action@v12
       with:
         name: lexuge
         authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
+        # Don't push source or .iso files as they are pointless to take up precious cache space.
+        pushFilter: '(-source$|nixpkgs\.tar\.gz$|\.iso$)'
 
     # Run the general flake checks
     - run: nix flake check -vL
-
